--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,39 +8,17 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <!-- Header -->
   <div id="header-placeholder"></div>
-
-  <!-- Main Content -->
-  <main class="container text-center my-5">
-    <h1 class="display-4">Start Your Trading Today</h1>
-    <div class="d-flex justify-content-center my-4">
-      <button class="btn btn-danger mx-2">Buy</button>
-      <button class="btn btn-secondary mx-2">Sell</button>
-    </div>
-    <p class="lead my-4">--- OR ---</p>
-    <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Search your Game" aria-label="Search your Game">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button">Search</button>
-      </div>
-    </div>
-  </main>
-
-  <!-- Footer -->
+  <div id="app-placeholder"></div>
   <div id="footer-placeholder"></div>
-
-  <!-- Modals -->
   <div id="modals-placeholder"></div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="components/modals/signInModal/signInModal.js"></script> 
   <script src="components/header/header.js"></script>
-  <script src="components/footer/footer.js"></script>
-  <script src="components/modals/signInModal/signInModal.js"></script>
-  <script src="components/modals/registerModal/registerModal.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
