--- a/frontend/src/pages/homePage/homePage.html
+++ b/frontend/src/pages/homePage/homePage.html
@@ -4,21 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../components/header/header.module.css">
-  <link rel="stylesheet" href="../../components/footer/footer.module.css">
-  <link rel="stylesheet" href="../homePage/homePage.module.css">
+  <link rel="stylesheet" href="pages/homePage/homePage.module.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- For FontAwesome icons -->
 </head>
 <body>
-  <div id="header"></div>
-  <main>
-    <h1>Home Page</h1>
-    <p>Welcome to the Home Page!</p>
+  <!-- Main Content -->
+  <main class="container text-center my-5">
+    <h1 class="display-4">Start Your Trading Today</h1>
+    <div class="d-flex justify-content-center my-4">
+      <button class="btn btn-danger mx-2 btn-buy">Buy</button>
+      <button class="btn btn-secondary mx-2 btn-sell">Sell</button>
+    </div>
+    <p class="lead my-4">--- OR ---</p>
+    <div class="search-group">
+      <div class="input-group-prepend">
+        <button class="btn search-hamburger" type="button">
+          <i class="fas fa-bars"></i> <!-- Hamburger icon -->
+        </button>
+      </div>
+      <input type="text" class="form-control search-input" placeholder="Search your Game" aria-label="Search your Game">
+      <button class="btn search-button" type="button">
+        <i class="fas fa-search"></i> <!-- Search icon -->
+      </button>
+    </div>
   </main>
-  <div id="footer"></div>
-  <script src="../../api/apiService.js"></script>
-  <script src="../components/header.js"></script>
-  <script src="../components/footer.js"></script>
-  <script src="../pages/homePage.js"></script>
 </body>
 </html>
