--- a/frontend/src/pages/games/games.html
+++ b/frontend/src/pages/games/games.html
@@ -12,60 +12,82 @@
     <aside class="sidebar">
       <h2>Gaming</h2>
       <p>50000 items</p>
-      
+      <p class="cross"></p>
+
       <div class="sidebar-section">
         <h3>Categories</h3>
         <ul>
-          <li>Games (46230)</li>
-          <li>DLCs (5520)</li>
-          <li>Gaming Gift Cards (5320)</li>
-          <li>Others (3010)</li>
+          <li> Games</label> <span>46,230</span></li>
+          <li> DLCs</label> <span>5,520</span></li>
+          <li> Gaming Gift Cards</label> <span>5,320</span></li>
+          <li> Others</label> <span>3,010</span></li>
         </ul>
       </div>
 
       <div class="sidebar-section">
         <h3>Price (USD)</h3>
-        <input type="text" placeholder="From"> - <input type="text" placeholder="To">
+        <div class="price-range">
+          <input type="text" placeholder="From">
+          <span>-</span>
+          <input type="text" placeholder="To">
+        </div>
+        <p class="cross"></p>
+      </div>
+
+      <div class="sidebar-section">
+        <h3>Availability</h3>
+        <ul>
+          <li><label><input type="checkbox"> Items that can be activated in Vietnam</label></li>
+          <li><label><input type="checkbox"> Items in stock</label> <span>74,507</span></li>
+        </ul>
+        <p class="cross"></p>
       </div>
 
       <div class="sidebar-section">
         <h3>Platform</h3>
+        <input class="input-box" type="text" placeholder="Search for Platform">
         <ul>
-          <li>Steam (63210)</li>
-          <li>Xbox Live (52520)</li>
-          <li>PSN (39870)</li>
-          <li>Origin (29550)</li>
-          <li>Nintendo eShop (12870)</li>
+          <li><label><input type="checkbox"> Steam</label> <span>63,210</span></li>
+          <li><label><input type="checkbox"> Xbox Live</label> <span>52,520</span></li>
+          <li><label><input type="checkbox"> PSN</label> <span>39,870</span></li>
+          <li><label><input type="checkbox"> Origin</label> <span>29,550</span></li>
+          <li><label><input type="checkbox"> Nintendo eShop</label> <span>12,870</span></li>
         </ul>
+        <p class="cross"></p>
       </div>
 
       <div class="sidebar-section">
         <h3>Type</h3>
         <ul>
-          <li>Game (37572)</li>
-          <li>DLC (10897)</li>
-          <li>Addon (3557)</li>
-          <li>App (720)</li>
+          <li><label><input type="checkbox"> Game</label> <span>37,572</span></li>
+          <li><label><input type="checkbox"> DLC</label> <span>10,897</span></li>
+          <li><label><input type="checkbox"> Addon</label> <span>3,557</span></li>
+          <li><label><input type="checkbox"> App</label> <span>720</span></li>
         </ul>
+        <p class="cross"></p>
       </div>
 
       <div class="sidebar-section">
         <h3>Versions</h3>
+        <input class="input-box" type="text" placeholder="Search for Versions">
         <ul>
-          <li>REGION FREE (35293)</li>
-          <li>EUROPE (23572)</li>
-          <li>UNITED STATES (12907)</li>
+          <li><label><input type="checkbox"> REGION FREE</label> <span>35,293</span></li>
+          <li><label><input type="checkbox"> EUROPE</label> <span>23,572</span></li>
+          <li><label><input type="checkbox"> UNITED STATES</label> <span>12,907</span></li>
         </ul>
+        <p class="cross"></p>
       </div>
 
       <div class="sidebar-section">
         <h3>Device</h3>
+        <input class="input-box" type="text" placeholder="Search for Device">
         <ul>
-          <li>PC (46210)</li>
-          <li>Xbox One (39150)</li>
-          <li>Xbox Series X/S (12975)</li>
-          <li>PS5 (12450)</li>
+          <li><label><input type="checkbox"> PC</label> <span>46,210</span></li>
+          <li><label><input type="checkbox"> Xbox One</label> <span>39,150</span></li>
+          <li><label><input type="checkbox"> Xbox Series X/S</label> <span>12,975</span></li>
+          <li><label><input type="checkbox"> PS5</label> <span>12,450</span></li>
         </ul>
+        <p class="cross"></p>
       </div>
     </aside>
 
